--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Assignment 3</title>
+    <title>Freddy Fazbear's Pizza</title>
+    <meta content="Freddy Fazbear's Pizza" property="og:title" />
+    <meta
+      content="A magical place for kids and grown-ups alike, where fantasy and fun come to life."
+      property="og:description"
+    />
+    <meta content="website" property="og:type" />
+    <meta content="https://pnguyen72.github.io/assignment3" property="og:url" />
+    <meta
+      content="https://pnguyen72.github.io/assignment3/resources/pizza.png"
+      property="og:image"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="/resources/pizza.png" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Creepster&display=swap");
     </style>
